fix(series): use jump in series posts link
instead of go to

--- a/sass/parts/_posts_list.scss
+++ b/sass/parts/_posts_list.scss
@@ -69,7 +69,7 @@
 }
 
 #series-title {
-    #go-to-button {
+    #jump-to-posts-button {
         float: right;
     }
 }
